# iso6976-py_2016

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/iso6976/: __init__.py  _calc.py  _tables.py  api.py  components.py
tests/: test_annex_d_pdf.py  test_iso6976.py
tests/data/: example1.npz  example2.npz  example3.npz  example3_ex.npz
