[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iso6976"
version = "0.1.0"
description = "Python port of ISO 6976:2016 — calorific values and properties of natural gas from composition."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Erik van der Werff" },
]
keywords = ["iso6976", "natural-gas", "calorific-value", "wobbe-index", "metrology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pyreadr>=0.5",
]

[project.urls]
Homepage = "https://github.com/ErikvanderWerff/iso6976-py"
Source = "https://github.com/ErikvanderWerff/iso6976-py"
"Original R package" = "https://github.com/RuedigerForster/ISO_6976"

[tool.hatch.build.targets.wheel]
packages = ["src/iso6976"]

[tool.pytest.ini_options]
testpaths = ["tests"]
